istio/virtual-service/virtual-service-precio-503.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: precio
spec:
  hosts:
  - precio
  http:
  - fault:
      abort:
        httpStatus: 503
        percent: 50
    route:
    - destination:
        host: precio
        subset: app-precio
---
