istio/virtual-service/virtual-service-precio-delay.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  creationTimestamp: null
  name: precio
spec:
  hosts:
    - precio
  http:
    - fault:
        delay:
          fixedDelay: 7s
          percentage:
            value: 100
    route:
      - destination:
          host: precio
          subset: app-precio
