istio/virtual-service/virtual-service-precio-timeout.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  creationTimestamp: null
  name: precio
spec:
  hosts:
  - precio
  http:
  - route:
    - destination:
        host: precio
    timeout: 1.000s
