istio/virtual-service/virtual-service-precio-v1-mirror-v2.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: precio
spec:
  hosts:
  - precio
  http:
  - route:
    - destination:
        host: precio
        subset: version-v1
    mirror:
      host: precio
      subset: version-v2
---
