istio/virtual-service/virtual-service-precio-v1_and_v2_50_50.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  creationTimestamp: null
  name: precio
spec:
  hosts:
  - precio
  http:
  - route:
    - destination:
        host: precio
        subset: version-v1
      weight: 50
    - destination:
        host: precio
        subset: version-v2
      weight: 50
---
