istio/virtual-service/virtual-service-precio-v2_retry.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: precio
spec:
  hosts:
  - precio
  http:
  - route:
    - destination:
        host: precio
    retries:
      attempts: 3
      perTryTimeout: 2s
---
