istio/virtual-service/virtual-service-precio-v3.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: precio
spec:
  hosts:
  - precio
  http:
  - route:
    - destination:
        host: precio
        subset: version-v3
      weight: 100
---
