istio/virtual-service/virtual-service-precio-virtualized.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  creationTimestamp: null
  name: precio
spec:
  hosts:
  - precio
  http:
  - match:
    - sourceLabels:
        app: preference
        version: v2
    route:
    - destination:
        host: precio
        subset: version-virtualized
  - route:
    - destination:
        host: precio
        subset: version-v1
---
