istio/virtual-service/virtual-service-safari-precio-v2.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  creationTimestamp: null
  name: precio
spec:
  hosts:
  - precio
  http:
  - match:
    - headers:
        baggage-user-agent:
          regex: .*Safari.*
    route:
    - destination:
        host: precio
        subset: version-v2
  - route:
    - destination:
        host: precio
        subset: version-v1
---
